# weather-bot

./: .gitignore  Cargo.toml  Dockerfile  README.md  build.rs
src/: main.rs
